--- a/web/src/Sidebar.css
+++ b/web/src/Sidebar.css
@@ -1,5 +1,5 @@
 aside {
-    widows: 320px;
+    width: 320px;
     background: #ffffff;
     box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.02);
     border-radius: 2px;
